--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -1,17 +1,171 @@
-  @import './rule-sets/rule-sets.less';
+@import './rule-sets/rule-sets.less';
 
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
+  // padding: 1em;
+  color: #5d5b6a;
+  font-size: 0.9em;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+p {
+  margin: 0 auto;
+}
+
+.ticker-wrapper {
+  border-bottom: 1px solid #f5cdaa;
+
+  &.rise>p:first-child {
+    animation: rise-bg 2s linear 0s 1;
   }
 
-  #root {
-    width: 100%;
-    height: 100%;
-    -webkit-overflow-scrolling: touch;
-    overflow-y: scroll;
+  &.fall>p:first-child {
+    animation: fall-bg 2s linear 0s 1;
   }
+
+  >p:first-child {
+    display: flex;
+    justify-content: space-between;
+    text-align: right;
+    margin: 0 auto;
+    padding: 0.7em 1em;
+
+
+    >span {
+      width: 20%;
+
+      &:first-child {
+        text-align: left;
+        width: 10%;
+      }
+    }
+  }
+}
+
+@keyframes rise-bg {
+  0% {
+    background: lightcoral;
+  }
+
+  100% {
+    background: transparent;
+  }
+}
+
+@keyframes fall-bg {
+  0% {
+    background: lightgreen;
+  }
+
+  100% {
+    background: transparent;
+  }
+}
+
+.ticker-header {
+  background: #f5cdaa;
+  font-weight: bold;
+
+  &:last-child {
+    position: sticky;
+
+    bottom: 0;
+  }
+
+  &:first-child {
+    position: sticky;
+    top: 0;
+  }
+}
+
+.table {
+  >p:first-child {
+    font-weight: bold;
+  }
+
+  >p {
+    padding: 0.6em 1em;
+    display: flex;
+    justify-content: space-between;
+    text-align: right;
+    align-items: center;
+
+    >span {
+      width: 20%;
+      flex-grow: 1;
+
+      &:first-child {
+        text-align: left;
+        width: 10%;
+      }
+    }
+  }
+}
+
+.ub-button {
+  font-size: inherit;
+  color: inherit;
+  background: #f5cdaa;
+  height: auto;
+  padding: 0.3em 0.6em;
+}
+
+.ticker-details {
+  align-items: flex-start;
+  border-top: 1px solid #f5cdaa;
+
+  >div:first-child {
+    width: 60%;
+
+  }
+
+  >div:nth-child(2) {
+    width: 40%;
+    border-left: 1px solid #f5cdaa;
+  }
+
+  .table {
+    position: relative;
+    max-height: 50vh;
+    overflow: scroll;
+    // padding-left: 2em;
+    font-size: 0.8em;
+
+    >p {
+      padding: 0.3em 1em;
+    }
+
+    >p:first-child {
+      position: sticky;
+      top: 0;
+      background: #fff;
+    }
+  }
+
+  >div>p:first-child {
+    border-bottom: 1px solid #f5cdaa;
+  }
+}
+
+.bg_red {
+  background: #ffd2d2;
+}
+
+.bg_green {
+  background: #e6ffe6;
+}
