--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -16,7 +16,7 @@ body {
   overflow-y: scroll;
   // padding: 1em;
   color: #5d5b6a;
-  font-size: 0.9em;
+  font-size: 0.85em;
 }
 
 * {
@@ -30,6 +30,7 @@ p {
 .ticker-wrapper {
   border-bottom: 1px solid #f5cdaa;
 
+
   &.rise>p:first-child {
     animation: rise-bg 2s linear 0s 1;
   }
@@ -41,9 +42,10 @@ p {
   >p:first-child {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     text-align: right;
     margin: 0 auto;
-    padding: 0.7em 1em;
+    padding: 0.2em 1em;
 
 
     >span {
@@ -59,7 +61,7 @@ p {
 
 @keyframes rise-bg {
   0% {
-    background: lightcoral;
+    background: #ffd2d2;
   }
 
   100% {
@@ -69,7 +71,7 @@ p {
 
 @keyframes fall-bg {
   0% {
-    background: lightgreen;
+    background: #e6ffe6;
   }
 
   100% {
@@ -98,6 +100,11 @@ p {
     font-weight: bold;
   }
 
+  >p.tac {
+    text-align: center;
+    display: block;
+  }
+
   >p {
     padding: 0.6em 1em;
     display: flex;
@@ -108,6 +115,11 @@ p {
     >span {
       width: 20%;
       flex-grow: 1;
+
+      >span {
+        font-weight: normal;
+        font-size: 90%;
+      }
 
       &:first-child {
         text-align: left;
@@ -128,14 +140,15 @@ p {
 .ticker-details {
   align-items: flex-start;
   border-top: 1px solid #f5cdaa;
+  background: floralwhite;
 
   >div:first-child {
-    width: 60%;
+    width: 50%;
 
   }
 
   >div:nth-child(2) {
-    width: 40%;
+    width: 50%;
     border-left: 1px solid #f5cdaa;
   }
 
@@ -153,12 +166,12 @@ p {
     >p:first-child {
       position: sticky;
       top: 0;
-      background: #fff;
+      background: inherit;
     }
   }
 
   >div>p:first-child {
-    border-bottom: 1px solid #f5cdaa;
+    // border-bottom: 1px solid #f5cdaa;
   }
 }
 
@@ -168,4 +181,84 @@ p {
 
 .bg_green {
   background: #e6ffe6;
+}
+
+.place-order-wrapper {
+  background: floralwhite;
+  padding: 0 1em;
+
+
+  button {
+    width: 100%;
+    height: 2.2em;
+    color: floralwhite;
+
+    &.bg_red {
+      background: #ff7171;
+    }
+
+    &.bg_green {
+      background: #8df98d;
+    }
+  }
+
+  >* {
+    width: 47.5%;
+  }
+
+  >*:first-child {
+    box-sizing: content-box;
+    padding-right: 2.5%;
+    border-right: 1px solid #f5cdaa;
+  }
+
+  >div>p {
+    margin-bottom: 0.3em;
+
+    &:not(:first-child) {
+      font-size: 80%;
+    }
+
+    >span {
+      display: inline-flex;
+      cursor: pointer;
+      flex-grow: 1;
+
+      &:nth-child(2) {
+        margin-left: 1em;
+
+      }
+
+      // padding: 0 0.2em;
+    }
+  }
+}
+
+.expand-control {
+  cursor: pointer;
+  font-size: 80%;
+
+  background: floralwhite;
+
+  &:hover {
+    background: darken(floralwhite, 10%);
+
+  }
+
+  padding: 0.1em 0;
+}
+
+input {
+  text-align: right;
+  font: inherit;
+  color: inherit;
+}
+
+.ws-indicator {
+  position: fixed;
+  left: 0.8em;
+  bottom: 2.5em;
+  padding: 0.5em;
+  background: whitesmoke;
+  border-radius: 0.2em;
 }
