--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -7,6 +7,11 @@ body {
   width: 100%;
   height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+}
+
+body {
+  font-size: 0.85em;
 }
 
 #root {
@@ -16,7 +21,7 @@ body {
   overflow-y: scroll;
   // padding: 1em;
   color: #5d5b6a;
-  font-size: 0.85em;
+
 }
 
 * {
@@ -135,6 +140,11 @@ p {
   background: #f5cdaa;
   height: auto;
   padding: 0.3em 0.6em;
+
+  &:disabled {
+    background: lightgray;
+    color: grey;
+  }
 }
 
 .ticker-details {
@@ -252,6 +262,7 @@ input {
   text-align: right;
   font: inherit;
   color: inherit;
+
 }
 
 .ws-indicator {
@@ -261,4 +272,16 @@ input {
   padding: 0.5em;
   background: whitesmoke;
   border-radius: 0.2em;
+}
+
+div.login-modal {
+  width: 500px;
+  padding: 1em 2em;
+
+  >p {
+    margin-bottom: 0.5em;
+  }
+  .ub-dialog-footer {
+    justify-content: center;
+  }
 }
