--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -101,6 +101,10 @@ p {
         width: 8%;
       }
 
+      &:last-child {
+        width: 30%;
+      }
+
       // &:last-child {
       //   width: 25%;
       // }
