--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -86,6 +86,7 @@ p {
       top: 2em;
       background: #fff;
       z-index: 10;
+      box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
 
       &:hover {
         background: whitesmoke;
