--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -30,6 +30,10 @@ body {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 }
 
+.fs-8 {
+  font-size: 80% !important;
+}
+
 #root {
   width: 100%;
   height: 100%;
@@ -262,7 +266,8 @@ p {
     >p:first-child {
       position: sticky;
       top: 0;
-      // background: inherit;
+      background: #fff;
+      z-index: 3;
     }
   }
 
