--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -42,6 +42,9 @@ body {
   // padding: 1em;
   color: var(--font-color);
 
+  >.table {
+    padding-bottom: 80vh;
+  }
 }
 
 * {
@@ -74,7 +77,7 @@ p {
 }
 
 .ticker-list {
-  padding-bottom: 80vh;
+  // padding-bottom: 80vh;
 
   >div {
 
@@ -158,7 +161,7 @@ p {
 
   &:last-child {
     position: sticky;
-    bottom: 0;
+    bottom: 2em;
     z-index: 12;
     font-size: 90%;
     font-weight: normal;
@@ -220,6 +223,10 @@ p {
   padding: 0.3em 0.3em;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
   border: 1px solid #c6c6c6;
+
+  &::before {
+    content: '';
+  }
 
   &:hover {
     background: darken(#f2f2f2, 10%);
