--- a/src/footer/index.less
+++ b/src/footer/index.less
@@ -1,30 +1,53 @@
 .tab-footer {
   position: fixed;
   bottom: 0;
-  display: flex;
-  justify-content: space-between;
+
   width: 100%;
-  padding: 0.5em 2em;
+
   z-index: 999;
   text-align: center;
-  color: lightgray;
+
   border-top: 1px solid var(--border-color);
   // line-height: 1;
   font-size: 0.8em;
   background: #fff;
 
-  img {
-    width: 2.5em;
-    border: 1px solid lightgray;
-    border-radius: 50%;
-    padding: 0.2em;
-  }
-
-  >span.selected {
+  >p {
     color: gray;
+    padding: 0.2em 1em;
+    font-size: 90%;
+    background: var(--header-color);
 
     img {
-      border-color: gray;
+      height: 1em;
+      vertical-align: text-top;
+      margin: 0 0.2em;
     }
   }
+
+  >div {
+    padding: 0.5em 1em;
+    display: flex;
+    justify-content: space-between;
+    color: lightgray;
+
+    >span.selected {
+      color: gray;
+
+      img {
+        border-color: gray;
+      }
+    }
+
+    img {
+      width: 2.5em;
+      border: 1px solid lightgray;
+      border-radius: 50%;
+      padding: 0.2em;
+    }
+  }
+
+
+
+
 }
