working on pull and refresh

--- a/src/footer/index.less
+++ b/src/footer/index.less
@@ -14,13 +14,13 @@
 
   >p {
     color: gray;
-    padding: 0.2em 1em;
-    font-size: 90%;
+    padding: 0.4em 1em;
+    // font-size: 90%;
     background: var(--header-color);
 
     img {
       height: 1em;
-      vertical-align: text-top;
+      vertical-align: bottom;
       margin: 0 0.2em;
     }
   }
@@ -40,7 +40,7 @@
     }
 
     img {
-      width: 2.5em;
+      width: 2em;
       border: 1px solid lightgray;
       border-radius: 50%;
       padding: 0.2em;
