--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -5,7 +5,7 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  // height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 
 }
@@ -36,9 +36,9 @@ body {
 
 #root {
   width: 100%;
-  height: 100%;
+  // height: 100%;
   -webkit-overflow-scrolling: touch;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   // padding: 1em;
   color: var(--font-color);
 
