ui improvements; add reverse orders

--- a/src/footer/index.less
+++ b/src/footer/index.less
@@ -41,6 +41,9 @@
 
     img {
       width: 2em;
+      height: 2em;
+      line-height: 1.4em;
+      display: inline-block;
       border: 1px solid lightgray;
       border-radius: 50%;
       padding: 0.2em;
