--- a/src/gadgets/num_input/index.less
+++ b/src/gadgets/num_input/index.less
@@ -6,17 +6,30 @@
 }
 
 .num-input {
+  display: flex;
+  align-items: center;
+
   >span:nth-child(2) {
     margin: 0 0.5em;
+    line-height: 1;
+    text-align: center;
+
+    >span {
+      font-size: 70%;
+      color: #b0b0b0;
+    }
   }
 
   >span:first-child,
   >span:last-child {
     display: inline-block;
     border-radius: 50%;
-    background: lightgray;
-    .centered(1.2em);
+    // background: lightgray;
+    .centered(1.5em);
+    
     color: #666;
+    background-image: linear-gradient(0deg, rgba(77, 149, 255, 1), rgba(57, 131, 241, 1));
+    color: #fff;
 
   }
 }
