--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -189,6 +189,10 @@ p {
   //   display: block;
   // }
 
+  >p:not(:first-child) {
+    box-shadow: 0 0 2px 0px rgba(0,0,0,0.1);
+  }
+
   >p {
     margin-bottom: 0.5em;
     padding: 0.5em;
@@ -202,10 +206,12 @@ p {
     >span {
       width: 20%;
       flex-grow: 1;
+      line-height: 1;
 
       >span {
         font-weight: normal;
-        font-size: 90%;
+        font-size: 80%;
+        color: #b0b0b0;
       }
 
       &:first-child {
