minor ui improvements

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -23,13 +23,13 @@ body {
 
 @media (prefers-color-scheme: dark) {
   body {
-    --body-bg-color: rgb(31, 31, 31);
+    --body-bg-color: rgb(39, 39, 39);
     --border-color: rgb(70, 70, 70);
     --down-color: #11ec11;
     --up-color: lightcoral;
-    --font-color: #9c9a9a;
+    --font-color: rgb(187, 192, 196);
     --font-color-white: #e2dbdb;
-    --background-color: rgb(31, 31, 31);
+    --background-color: rgb(51, 56, 59);
   }
 
   div.tab-footer {
@@ -194,7 +194,7 @@ p {
 
 .ticker-header {
   // background: var(--header-color);
-  font-weight: bold;
+  // font-weight: bold;
   z-index: 2;
 
   &:first-child {
@@ -206,7 +206,7 @@ p {
 
 .table {
   >p:first-child {
-    font-weight: bold;
+    // font-weight: bold;
     margin-bottom: 0;
     border-bottom: 1px solid var(--border-color);
     // background: floralwhite;
