--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -224,7 +224,7 @@ p {
   >p {
     // margin: 0 0.8em 0.5em;
     margin-bottom: 0.5em;
-    padding: 0.5em;
+    padding: 0.5em 0.8em;
     display: flex;
     justify-content: space-between;
     text-align: right;
@@ -645,4 +645,45 @@ div.num-input-wrapper {
 
 
 
+}
+
+.main-wrapper {
+  display: flex;
+
+  >* {
+    flex-grow: 1;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .tab-footer>div {
+    display: none;
+  }
+
+  .ticker-list {
+    position: sticky;
+    top: 0;
+    /* flex-grow: 0; */
+    /* flex-shrink: 1; */
+    max-height: 100vh;
+    overflow: scroll;
+  }
+
+  // .finished_orders,
+  // .finished_orders {
+  //   height: 90vh;
+  //   padding-bottom: 10vh;
+  //   overflow: scroll;
+  // }
+
+  .main-wrapper {
+
+    >* {
+      width: 33%;
+
+      &:not(:first-child) {
+        border-left: 1px solid var(--border-color);
+      }
+    }
+  }
 }
