--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -687,3 +687,18 @@ div.num-input-wrapper {
     }
   }
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 0px;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb,
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
