optimize performance; trying to convert to reducer struct

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -565,7 +565,7 @@ div.num-input-wrapper {
 
 .finished_orders {
   font-size: 85%;
-  padding-bottom: 50vh;
+  // padding-bottom: 50vh;
 
   >p:first-child {
     background-color: var(--background-color);
