usability improvement & add loading progress on finished orders page

--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -563,6 +563,10 @@ div.num-input-wrapper {
   }
 }
 
+.finished_orders_fetch_progress {
+  transition: all .3s ease;
+}
+
 .finished_orders {
   font-size: 85%;
   // padding-bottom: 50vh;
@@ -649,6 +653,7 @@ div.num-input-wrapper {
 
 .main-wrapper {
   display: flex;
+  padding-bottom: 100px;
 
   >* {
     flex-grow: 1;
